<resources>
    <string name="app_name">QOC - UEN</string>
    <string name="module_one"> MNCH </string>
    <string name="routinetwo"> Key Quality Indicator Tool for Health Facility </string>
    <string name="routineone"> DHIS Data-Validation Tools for Decision Making </string>
    <string name="routinethree"> Performance Evaluation of District Team Meetings </string>
    <string name="routine1two"> Key Quality Indicator Tool for HF </string>
    <string name="routine1one"> DHIS Data-Validation Tools for DM </string>
    <string name="routine1three"> Performance Evaluation of DHMTs </string>
    <string name="routine2two"> KQI-HF </string>
    <string name="routine2one"> DHIS-DVT </string>
    <string name="routine2three"> DHMT Monitoring </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MNCH</string>
    <string name="nav_header_subtitle">xyz</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nextSection">Next Section</string>
    <string name="end_interview">End Interview</string>
    <string name="endForm">End Form</string>
    <string name="numberhint">Number</string>
    <string name="hf_district">District</string>
    <string name="meetingtime">Please Select Meeting Date and Time</string>
    <string name="hf_tehsil">Tehsil</string>
    <string name="hf_uc">Union Council</string>
    <string name="hf_uen_private">Private Facility Name</string>
    <string name="hf_uen_public">Public Facility Name</string>
    <string name="hf_consent">Is Consent form Signed</string>
    <string name="check">Check</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="nap">Not Applicable</string>
    <string name="msing">Missing</string>
    <string name="na">Not Available</string>
    <string name="istatus">Interview Results</string>
    <string name="istatusa">Complete</string>
    <string name="istatusb">Incomplete</string>
    <string name="date"> Date </string>
    <string name="time"> Time </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="rshint01"> Maternal Health Register (both PHC &amp; SHC) </string>
    <string name="rs01"> ANC – 1 visit </string>
    <string name="rs02"> ANC Revisits ( 2, 3, 4 or more) </string>
    <string name="rs03"> ANC - 1 women with Hb &lt; 10g/dl </string>
    <string name="rs04"> PNC - 1 visits </string>
    <string name="rs05"> PNC Revisits (2, 3, 4 or more) </string>
    <string name="rshint02"> Secondary Healthcare Facilities - Ob/Gyn OPD register </string>
    <string name="rs07"> New Cases OB/GYN </string>
    <string name="rs08"> Referred Cases Attended (OB/GYN) </string>
    <string name="rshint03"> Obstetric Register (both PHC &amp; SHC) </string>
    <string name="rs09"> Normal Vaginal Delivery </string>
    <string name="rs10"> Assisted Vaginal Deliveries </string>
    <string name="rs11"> Cesarean Sections </string>
    <string name="rs12"> Postpartum Hemorrhage </string>
    <string name="rs13"> Pre-Eclampsia/ Eclampsia </string>
    <string name="rs14"> Prolonged Obstructed Labors </string>
    <string name="rs15"> Puerperal Sepsis </string>
    <string name="rs16"> Rupture Uterus </string>
    <string name="rs17"> Maternal Mortality </string>
    <string name="rs18"> Live births in the facility </string>
    <string name="rs19"> Live births with LBW ( &lt; 2.5kg ) </string>
    <string name="rs20"> Stillbirths in the facility </string>
    <string name="rs41"> IUDs (Intra Uterine Death) in the facility </string>
    <string name="rs21"> Newborns with birth asphyxia </string>
    <string name="rs22"> Newborn successfully resuscitated </string>
    <string name="rs23"> Women provided misoprostol after delivery </string>
    <string name="rs24"> Newborns to whom chlorhexadine gel is applied to umbilical stumps </string>
    <string name="rs25"> Pre-term births </string>
    <string name="rs26"> Birth trauma </string>
    <string name="rs29"> Neonatal deaths (0 to 28 days) </string>
    <string name="rs42"> Suspected Neonatal Tetanus </string>
    <string name="rshint04"> OPD register-PHC (Pediatrics OPD register for SHC) </string>
    <string name="rs33"> Diarrhea / Dysentery cases &lt;5 years (OPD)</string>
    <string name="rs30"> Number of Pneumonia cases &lt;5 years (OPD) </string>
    <string name="rs44"> Number of ARI cases &lt;5 years (OPD) </string>
    <string name="rs37"> Total Peads OPD (1 &#8211; 11 months) </string>
    <string name="rs38"> Total Peads OPD (12 &#8211; 59 months) </string>
    <string name="rs39"> Follow up cases Peads </string>
    <string name="rs40"> Referred Cases attended (Pediatrics) </string>
    <string name="rshint05"> Indoor Register (SHC) </string>
    <string name="rs34"> Number of Diarrhea cases &lt;5 years (Indoor) </string>
    <string name="rs31"> Number of Pneumonia cases &lt;5 years (Indoor) </string>
    <string name="rs45"> Number of Dysentery cases &lt;5 years (Indoor) </string>
    <string name="rs27"> Number of Infant deaths (1 &#8211; 11 months) </string>
    <string name="rs28"> Number of child deaths (1 to 4 years) </string>
    <string name="rs35"> Deaths due to Diarrhea among  &lt;5 years (Indoor) </string>
    <string name="rs46"> Deaths due to Dysentery among  &lt;5 years (Indoor) </string>
    <string name="rs32"> Deaths due to Pneumonia cases &lt;5 years (Indoor) </string>
    <string name="rshint06"> EPI Health Register (both PHC &amp; SHC) </string>
    <string name="rs06"> Pregnant Women given TT-2 vaccination </string>
    <string name="rs47"> Children &lt;12 months received 3rd Pentavalent Vaccine </string>
    <string name="rs48"> Children &lt;12 months received 1st Measles Vaccine </string>
    <string name="rra"> Remarks / Reasons / Action Points </string>
    <string name="rsrem"> Remarks </string>
    <string name="summary"> Summary </string>
    <string name="adsummary"> Add summary of meeting </string>
    <string name="qaAp">Action Plans to Improve Quality Statement &amp; Standard</string>
    <string name="qa01">Evidence Based Practices for routine care and management of complications during labour, child birth and early post natal period as per guidelines</string>
    <string name="qa0101"><![CDATA[Routine assessment of every mother on admission, during labour and child birth and are given timely & appropriate care]]></string>
    <string name="qa0102">Every Women / Newborn / Child have provide support to get immunized for their respective immunization plan as per Guideline</string>
    <string name="qa0103">Women with Pre Eclampsia / Eclampsia promptly receive appropriate intervention, as per guideline (IV Anticonvulsants and Anti-Hypertensive)</string>
    <string name="qa0104">Women with Post-Partum Hemorrhages promptly receive appropriate intervention, as per guideline (Active Management of 3rd Stage of Labour through IV / Oral Uterotonics)</string>
    <string name="qa0105">Women with Prolong / Obstructed Labour promptly receive appropriate intervention, as per guideline (Available and Properly Filled Partograph)</string>
    <string name="qa0106">Women with Pre-Term Labour promptly receive appropriate intervention, as per guideline (IV Dexamethasone and Nifidipine)</string>
    <string name="qa0107">Women with or at risk of any infection during labour, child birth and early post natal period promptly receive appropriate intervention, as per guideline (IV Antibiotics)</string>
    <string name="qa0108"><![CDATA[Newborns who are not breathing spontaneously receive resuscitation with bag & mask within one minute of birth (Implementation of HBB)]]></string>
    <string name="qa0109">Newborn with or at risk of any suspected infections (PSBI) promptly receive appropriate intervention, as per guideline</string>
    <string name="qa0110"><![CDATA[Preterm & Small Babies receive appropriate care as per guidelines (Implementation of ECSB & ECEB Guidelines)]]></string>
    <string name="qa0111">Newborn receive routine care immediately after birth (Breast Feeding, CHX application and Immunization)</string>
    <string name="qa0112"><![CDATA[Mother and Newborn receive routine post natal care (Maternal & Neonatal Danger Signs in Post Natal Period)]]></string>
    <string name="qa0113"><![CDATA[Child presenting with Cough or difficult breathing promptly receive appropriate intervention, as per IMNCI guideline (Use of ARI Timer, Pulse Oximeter & Amoxil DT)]]></string>
    <string name="qa0114">Child presenting with diarrhea promptly receive appropriate intervention, as per IMNCI guideline (Use of Zinc DT, Lo-ORS)</string>
    <string name="qa0115">Child presenting with Possible serious bacterial infections promptly receive appropriate intervention, as per IMNCI guideline</string>
    <string name="qa0116">The Health Care Provider and Skilled Birth Attendant in respective facility receive In-Service Training on Updated Intervention / Guidelines</string>
    <string name="qb02">Actionable Information System</string>
    <string name="qb0201"> Every Women / Newborn / Child has a complete, accurate, standardized medical record during attaining hospital / clinic for OPD / IPD care </string>
    <string name="qb0202"> Every health facility has a mechanism of Monthly data collection source Registers (DHIS / PPMIS) </string>
    <string name="qb0203"> Every health facility has a mechanism of Monthly Report Generation through source Registers and Analyzed indicators (DHIS / PPMIS) </string>
    <string name="qc03"> Functioning Referral System </string>
    <string name="qc0301"> Established both referral system i.e. from community to health facility and between health facilities </string>
    <string name="qc0302"> Every Women / Newborn / Child is appropriately assessed before referral, and Refer is made without delay</string>
    <string name="qc0303"> Every Women / Newborn / Child referred within or between health facilities there is appropriate information exchange (Referral Note) </string>
    <string name="qc0304"> An up to date list of networking facilities in the same geographical area that provide referral care to clients should pasted on wall </string>
    <string name="qc0305"> The Health Facility has ready access to a functioning ambulance or other vehicle for emergency transportation of clients </string>
    <string name="qd04"> Effective Communications </string>
    <string name="qd0401"> <![CDATA[Every Women / Newborn / Child along with their families should receive clear and accurate information exchange by health care provider (Before & After getting Care)]]> </string>
    <string name="dh01"> Regularity of meetings; held within 100 days of last meeting </string>
    <string name="dh02"> Meeting Conducted on defined date or it was postponed </string>
    <string name="dh03"> Chairmanship of meetings; chaired by designated/notified chairperson (District Health Officer / Deputy Commissioner) </string>
    <string name="dh04"> Review of health system’s performance using data sources; DHIS and LHW-MIS (By Others) </string>
    <string name="dh05"> Presentation of health system’s performance using data sources; DHIS QOC, LHW-MIS, and Gap Analysis (By AKU Representative) </string>
    <string name="dh06"> What are the basic / key Decisions has been taken on the basis of data review; for improving performance by meeting lead? </string>
</resources>