<?xml version="1.0" encoding="utf-8"?>
<layout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/rsd_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="72dp"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="edu.aku.ramshasaeed.mnch.activities.RsdMain">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <!--<TextView
                style="@style/textViewCenterGravity"
                android:text="@string/routineone" />-->

            <Button
                android:id="@+id/form01"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:onClick="openForm"
                android:text="@string/rshint01"
                android:textSize="20dp" />

            <Button
                android:id="@+id/form02"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:onClick="openForm"
                android:text="@string/rshint02"
                android:textSize="20dp" />

            <Button
                android:id="@+id/form03"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:onClick="openForm"
                android:text="@string/rshint03"
                android:textSize="20dp" />

            <Button
                android:id="@+id/form04"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:onClick="openForm"
                android:text="@string/rshint04"
                android:textSize="20dp" />

            <Button
                android:id="@+id/form05"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:onClick="openForm"
                android:text="@string/rshint05"
                android:textSize="20dp" />

            <Button
                android:id="@+id/form06"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:onClick="openForm"
                android:text="@string/rshint06"
                android:textSize="20dp" />
            <!--

                        <Button
                            android:id="@+id/form07"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="8dp"
                            android:onClick="openForm"
                            android:text="@string/rshint07"
                            android:textSize="20dp" />
            -->

        </LinearLayout>

    </ScrollView>

</layout>