<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.Rsd02">

    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="edu.aku.ramshasaeed.mnch.activities.Rsd02" />
    </data>

    <ScrollView
        android:id="@+id/rsd_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dullWhile">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:animateLayoutChanges="true"
            android:background="@color/dullWhile"
            android:orientation="vertical">


            <!--SECTION 02 STARTS HERE-->
            <TextView
                style="@style/textViewCenterGravity"
                android:text="@string/rshint02" />

            <android.support.v7.widget.CardView
                style="@style/cardView"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="@null"
                android:layout_marginRight="3dp">

                <LinearLayout
                    style="@style/linerlayout_view"
                    android:paddingRight="5dp">


                    <!--RS06 STARTS HERE-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/textViewstartAlignGravity"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:layout_weight="3"
                            android:text="@string/rs06" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <EditText
                                android:id="@+id/rs06"
                                style="@style/textInput"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="2dp"
                                android:layout_marginTop="8dp"
                                android:layout_marginRight="2dp"
                                android:gravity="center"
                                android:hint="@string/numberhint"
                                android:inputType="number"
                                android:maxLength="4"
                                android:text='@{rs0699.checked ?  "":rs06.getText.toString }'
                                android:visibility='@{rs0699.checked ? View.GONE : View.VISIBLE }' />

                            <CheckBox
                                android:id="@+id/rs0699"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginRight="3dp"
                                android:gravity="center"
                                android:text="@string/msing"
                                android:textColor="@color/gray"
                                android:textSize="16sp" />

                        </LinearLayout>

                    </LinearLayout>
                    <!--RS06 ENDS HERE-->

                </LinearLayout>

            </android.support.v7.widget.CardView>
            <!--SECTION 02 ENDS HERE-->


            <!--  = = = = =  END OF FORM FIELDS  = = = = = -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="32dp">

                <Button
                    android:id="@+id/btn_End"
                    style="@style/buttons"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/red"
                    android:onClick="@{() -> callback.BtnEnd()}"
                    android:text="@string/endForm"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_Continue"
                    style="@style/buttons"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#1ed61e"
                    android:onClick="@{() -> callback.BtnContinue()}"
                    android:text="@string/nextSection"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>