<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.DHMT_MonitoringActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="edu.aku.ramshasaeed.mnch.activities.DHMT_MonitoringActivity" />
    </data>

    <ScrollView
        android:id="@+id/rsd_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dullWhile">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:animateLayoutChanges="true"
            android:background="@color/dullWhile"
            android:orientation="vertical">
            <!--001-->
            <TextView
                style="@style/textViewCenterGravity"
                android:elevation="5dp"
                android:text="@string/dh01" />

            <!--01-->
            <android.support.v7.widget.CardView
                style="@style/cardView"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="@null"
                android:layout_marginRight="3dp">

                <LinearLayout
                    style="@style/linerlayout_view"
                    android:paddingRight="5dp">

                    <RadioGroup
                        android:id="@+id/dh01"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <RadioButton
                            android:id="@+id/dh01a"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="3dp"
                            android:layout_weight="1"
                            android:text="@string/yes"
                            android:textColor="@color/gray"
                            android:textSize="16sp" />

                        <RadioButton
                            android:id="@+id/dh01b"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginRight="3dp"
                            android:text="@string/no"
                            android:textColor="@color/gray"
                            android:textSize="16sp" />

                    </RadioGroup>


                </LinearLayout>
            </android.support.v7.widget.CardView>


            <!--002-->
            <TextView
                style="@style/textViewCenterGravity"
                android:elevation="5dp"
                android:text="@string/dh02" />

            <!--02-->
            <android.support.v7.widget.CardView
                style="@style/cardView"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="@null"
                android:layout_marginRight="3dp">

                <LinearLayout
                    style="@style/linerlayout_view"
                    android:paddingRight="5dp">

                    <RadioGroup
                        android:id="@+id/dh02"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <RadioButton
                            android:id="@+id/dh02a"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginRight="3dp"
                            android:text="@string/yes"
                            android:textColor="@color/gray"
                            android:textSize="16sp" />

                        <RadioButton
                            android:id="@+id/dh02b"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginRight="3dp"
                            android:text="@string/no"
                            android:textColor="@color/gray"
                            android:textSize="16sp" />

                    </RadioGroup>


                </LinearLayout>
            </android.support.v7.widget.CardView>
            <!--003-->
            <TextView
                style="@style/textViewCenterGravity"
                android:elevation="5dp"
                android:text="@string/dh03" />

            <!--03-->
            <android.support.v7.widget.CardView
                style="@style/cardView"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="@null"
                android:layout_marginRight="3dp">

                <LinearLayout
                    style="@style/linerlayout_view"
                    android:paddingRight="5dp">

                    <RadioGroup
                        android:id="@+id/dh03"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <RadioButton
                            android:id="@+id/dh03a"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginRight="3dp"
                            android:text="@string/yes"
                            android:textColor="@color/gray"
                            android:textSize="16sp" />

                        <RadioButton
                            android:id="@+id/dh03b"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginRight="3dp"
                            android:text="@string/no"
                            android:textColor="@color/gray"
                            android:textSize="16sp" />

                    </RadioGroup>


                </LinearLayout>
            </android.support.v7.widget.CardView>
            <!--004-->
            <TextView
                style="@style/textViewCenterGravity"
                android:elevation="5dp"
                android:text="@string/dh04" />

            <!--04-->
            <android.support.v7.widget.CardView
                style="@style/cardView"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="@null"
                android:layout_marginRight="3dp">

                <LinearLayout
                    style="@style/linerlayout_view"
                    android:paddingRight="5dp">

                    <RadioGroup
                        android:id="@+id/dh04"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <RadioButton
                            android:id="@+id/dh04a"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginRight="3dp"
                            android:text="@string/yes"
                            android:textColor="@color/gray"
                            android:textSize="16sp" />

                        <RadioButton
                            android:id="@+id/dh04b"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginRight="3dp"
                            android:text="@string/no"
                            android:textColor="@color/gray"
                            android:textSize="16sp" />

                    </RadioGroup>


                </LinearLayout>
            </android.support.v7.widget.CardView>
            <!--005-->
            <TextView
                style="@style/textViewCenterGravity"
                android:elevation="5dp"
                android:text="@string/dh05" />

            <!--05-->
            <android.support.v7.widget.CardView
                style="@style/cardView"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="@null"
                android:layout_marginRight="3dp">

                <LinearLayout
                    style="@style/linerlayout_view"
                    android:paddingRight="5dp">

                    <RadioGroup
                        android:id="@+id/dh05"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <RadioButton
                            android:id="@+id/dh05a"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginRight="3dp"
                            android:text="@string/yes"
                            android:textColor="@color/gray"
                            android:textSize="16sp" />

                        <RadioButton
                            android:id="@+id/dh05b"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginRight="3dp"
                            android:text="@string/no"
                            android:textColor="@color/gray"
                            android:textSize="16sp" />

                    </RadioGroup>


                </LinearLayout>
            </android.support.v7.widget.CardView>
            <!--006-->
            <TextView
                style="@style/textViewCenterGravity"
                android:elevation="5dp"
                android:text="@string/dh06" />

            <!--06-->
            <android.support.v7.widget.CardView
                style="@style/cardView"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="@null"
                android:layout_marginRight="3dp">

                <LinearLayout
                    style="@style/linerlayout_view"
                    android:paddingRight="5dp">

                    <RadioGroup
                        android:id="@+id/dh06"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <RadioButton
                            android:id="@+id/dh06a"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginRight="3dp"
                            android:text="@string/yes"
                            android:textColor="@color/gray"
                            android:textSize="16sp" />

                        <RadioButton
                            android:id="@+id/dh06b"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginRight="3dp"
                            android:text="@string/no"
                            android:textColor="@color/gray"
                            android:textSize="16sp" />

                    </RadioGroup>


                </LinearLayout>
            </android.support.v7.widget.CardView>


            <!--  = = = = =  END OF FORM FIELDS  = = = = = -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="32dp">


                <Button
                    android:id="@+id/btnEnd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:onClick="@{() -> callback.BtnEnd()}"
                    android:text="@string/endForm"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnNext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:onClick="@{() -> callback.BtnContinue()}"
                    android:text="@string/nextSection"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</layout>
